fix nav bar burger text align

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -122,5 +122,6 @@
     width: 100%;
     border-bottom: 1px solid var(--border);
     font-size: 15px;
+    text-align: left;
   }
 }
